--- a/styles/style.css
+++ b/styles/style.css
@@ -11,8 +11,9 @@
 */
 
 .page {
-  background-image: url(../images/background.png);
-  background-repeat: repeat-x;
+  background-image: var(--background-img);
+  background-attachment:fixed;
+  background-size: cover;
   min-inline-size: 320px;
   min-block-size: 100dvb;
   font-family: var(--main-font), 'Open Sans';
@@ -20,7 +21,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: calc(100%-50px);
+  width: calc(100% - 50px);
 }
 
 .header{
@@ -56,7 +57,6 @@
 }
 
 .card {
-
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -68,8 +68,8 @@
   font-size: 18px;
   line-height: 100%;
   font-variation-settings: "wght" var(--weight-font-heading);
-  padding: 6px 10px;
-
+  padding: 5px 10px 4px;
+  letter-spacing: 0%;
 }
 
 .card__img-wrapper {
@@ -80,6 +80,8 @@
  max-width: 100%;
  height: 100%;
  object-fit: cover;	
+ display: block;
+ overflow: hidden;
 }
 
 .card__img-lable {
@@ -101,10 +103,10 @@
 } 
 
 .card__text {
-  padding: 25px 25px 0;
+  padding: 25px 26px 0;
   display: flex;
   flex-direction: column;
-  gap: 27px;
+  gap: 25px;
   border: 2px black solid;
 }
 
@@ -113,29 +115,69 @@
   line-height: 21px;
 }
 
+.card__paragraph:first-child {
+  margin-bottom: 2px;
+}
+
 .buttons {
+
   align-self: flex-end;
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 5px;
+  margin-bottom: 25px;
 }
 
 .card__icon-button {
-  inline-size: 39px;
-  block-size: 36px;
+  inline-size: 43px;
+  block-size: 40px;
   border: none;
   background-color: #fff;
   cursor: pointer;
   padding: 0;
+  border: 2px white solid;
+  transition: border 0.3s ease; 
+}
+
+.card__icon-button:focus {
+outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: 2px black solid;
 }
 
 .card__like-button {
+  position: relative;
   inline-size: 130px;
-  block-size: 38px;
-  border: 1px solid #000;
+  block-size: 40px;
+  border: 2px solid #000;
   background-color: #fff;
   cursor: pointer;
-  padding: 12.5px 37px;
+  padding: 12.5px 0;
+  outline: none;
+  overflow: hidden;
+}
+
+.card__like-button:focus {
+  box-shadow: 2px 2px 0 0 black;
+  transition: box-shadow 0.5s;
+}
+
+.card__like-button::before {
+  content: " ";
+  position: absolute;
+  left: 0;
+  top:0;
+  block-size: 100%;
+  inline-size: 100%;
+  background-color: #000;
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+}
+
+.card__like-button:hover::before {
+  transform: translateX(0);
 }
 
 .like-icon {
@@ -145,29 +187,25 @@
 }
 
 .button__text {
+  color: var(--buttom-text-color);
   font-family: var(--accent-font), serif;
   font-size: 14px;
   line-height: 90%;
+  mix-blend-mode: difference;
 }
-
-
-
-
-
-
-
 
 /*-------------------------*/
 .footer {
   margin-block-start: 50px;
   display: flex;
   align-items: center;
+  margin-block-end: 103px;
 }
 
 .footer__save-button {
-  inline-size: 335px;
-  block-size: 51px;
-  border: 1px solid #000;
+  inline-size: 100%;
+  min-block-size: 55px;
+  border: 2px solid #000;
   background-color: #fff;
   cursor: pointer;
   padding: 0;
@@ -175,11 +213,196 @@
   justify-content: center;
   align-items: center;
   gap: 3.5px;
+  padding: 0 21px;
+  outline: none;
+  overflow: hidden;
+  position: relative;
 }
 
 
-.floppy-icon {
+.footer__save-button:focus {
+  box-shadow: 2px 2px 0 0 black;
+  transition: box-shadow 0.5s;
+}
+
+.footer__save-button::before {
+  content: " ";
+  position: absolute;
+  left: 0;
+  top:0;
+  block-size: 100%;
+  inline-size: 100%;
+  background-color: #000;
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+}
+
+.footer__save-button:hover::before {
+  transform: translateX(0);
+}
+
+
+.svg_wrapper{
   inline-size: 21px;
   block-size: 21px;
+}
+
+.floppy-icon {
+  inline-size: 100%;
+  block-size: 100%;
   object-fit: contain;
+  mix-blend-mode: difference;
+  fill: #fff;
+}
+
+@media (max-width: 376px) {
+  .footer__save-button {
+    inline-size: 306px;
+    flex-direction: column;
+    padding: 15px;
+  }
+  
+  .svg_wrapper{
+    inline-size: 28px;
+    block-size: 28px;
+  }
+}
+
+/*-------------------------*/
+
+dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.8);
+} 
+
+.dialog_window {
+  min-block-size: 191px;
+  inline-size: 353px;
+  padding: 30px;
+  font-family: var(--accent-font), serif;
+  font-size: 14px;
+  line-height: 150%;
+  text-transform: uppercase;
+}
+
+.dialog_window[open] .dialog_text{
+  display: grid;
+  grid-template-columns: 40px auto;
+  gap: 20px;
+  align-items: center;
+}
+
+.dialog_window[open] .svg_wrapper{
+  inline-size: 39px;
+  block-size: 39px;
+}
+
+.dialog__save-button {
+  margin-top: 30px;
+  inline-size: 100%;
+  min-block-size: 38px;
+  border: 2px solid #000;
+  background-color: #fff;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+}
+
+/*-------------------------*/
+
+.filter_sepia {   /*-*/
+  filter: sepia(100%);
+}
+.filter_invert {  /*-*/
+  filter: invert(0.7);
+}
+.filter_blur {  /*-*/
+  filter: blur(7px);
+}
+.filter_grayscale {  /*-*/
+  filter: grayscale(80%);
+}
+.filter_hue-rotate { /*-*/
+  filter: hue-rotate(0.1turn);
+}
+.filter_invert { /*-*/
+  filter: invert(100%);
+}
+.filter_saturate {  /*-*/
+  filter: saturate(390%);
+}
+.filter_mix {
+  filter: blur(7px) hue-rotate(0.25turn);
+}
+
+
+/*-------------------------*/
+
+.sparks {
+  opacity: 0;
+}
+
+.like-icon:hover .core{
+  fill: var(--heart-counter-color);
+  transition: fill 0.3s linear 0s;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--heart-counter-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+
+.like-icon:active .core{
+  fill: var(--heart-main-color);
+  transition: fill 0.3s linear 0s;
+}
+
+.like-icon:active .main-body {
+  fill: var(--heart-main-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+/*-------------------------*/
+
+.like-icon.is-liked .core{
+  fill: var(--heart-main-color);
+  transition: fill 0.3s linear 0s;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--heart-main-color);
+  transition: fill 0.25s linear 0.05s;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--heart-main-color);
+  animation: fill 0.25s linear 0.05s;
+}
+
+.like-icon.is-liked .heart {
+  animation: scale_heart 0.3s ease-in 0.1s 1 alternate;
+}
+
+.like-icon.is-liked .sparks {
+  animation: show_sparks 0.3s ease-in 0.3s 1;
+}
+
+@keyframes scale_heart{
+  from{
+    transform: translate(0, 0) scale(1);
+  }
+  to{
+    transform: translate(-5px, -5px) scale(1.25);
+  }
+}
+
+@keyframes show_sparks {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
