--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -16,7 +16,7 @@
     src:
       local('Roboto-Flex-Variable'),
       url('../fonts/Inter-Variable.woff2') format('woff2 supports variations'),
-          url('../fonts/Inter-Variable.woff2') format('woff2-variations');
-      font-weight: 400, 785;
+      url('../fonts/Inter-Variable.woff2') format('woff2-variations');
+      font-weight: 400 700;
       font-style: -10 0;
   }
