--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,8 +2,8 @@
 :root {
     --main-font: Inter-Variable;
     --accent-font: PressStart2P;
-    --weight-font-text: 400;
-    --weight-font-heading: 700;
+    --weight-font-text: normal;
+    --weight-font-heading: bold;
     --stroke-color: #fff;
     --background-img: repeating-linear-gradient(90deg, #d3d3d3 0 2px, rgb(0 0 0 / 0) 2px 4px), repeating-linear-gradient(180deg, #d3d3d3 0 2px, rgb(0 0 0 / 0) 2px 4px), linear-gradient(180deg, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
     --buttom-text-color: #fff;
