--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -7,7 +7,7 @@
     font-weight: 400;
     src:
       local('PressStart2P-Regular'),
-      url('../fonts/PressStart2P-Regular.woff') format('woff');
+      url('PressStart2P-Regular.woff') format('woff');
   }
 
   @font-face {
@@ -15,8 +15,8 @@
     font-family: 'Inter-Variable';
     src:
       local('Roboto-Flex-Variable'),
-      url('../fonts/Inter-Variable.woff2') format('woff2 supports variations'),
-      url('../fonts/Inter-Variable.woff2') format('woff2-variations');
+      url('Inter-Variable.woff2') format('woff2 supports variations'),
+      url('Inter-Variable.woff2') format('woff2-variations');
       font-weight: 400 700;
       font-style: -10 0;
   }
